# web_docs_editor

./: .env.example  .gitignore  AUTH_GUIDE.md  BUILD_GUIDE.md  CHANGELOG.md  CLASSIFICATION_README.md  ELECTRON_README.md  LLM_server.py  MIGRATION_SUMMARY.md  PROMPT_CONFIG_README.md  README.md  SERVER_SETUP.md  VERSION_CONTROL_README.md  api-client.js  auth.js  build.js  classification-api.ts  classification_server.py  classserver.mjs  dashboard.css  dashboard.js  database-fallback.js  database-simple.js  database.js  db-encryption.js  dockerfile  docseditor.css  docseditor.html  docseditor.js  index.html  jest.config.js  login.html  main.js  main.py  package-lock.json  package.json  preload.js  pyproject.toml  qna.mjs  run-electron.bat  (+13 more)
__tests__/: auth.test.js  database.test.js
auth/: auth.js  login.html
dashboard/: dashboard.css  dashboard.js  index.html
database/: DatabaseManager.js  config.js  database.js  env-setup.js
docs/: AUTH_GUIDE.md  ELECTRON_README.md  ELECTRON_SETUP.md  README.md  REFINE_FEATURE_SUMMARY.md  document-management.md  export-features.md  getting-started.md  keyboard-shortcuts.md  media-links.md  text-formatting.md  troubleshooting.md  user-interface.md  version-control.md  watermarks.md
docseditor/: docseditor.css  docseditor.html  docseditor.js
electron/: main.js  splash.html
shared/: api-client.js  export-utils.js
standalone/: DEPLOYMENT.md  README.md  dashboard.html  index.html  launch.bat  launch.sh  test.html
test/: setup.js
test-utils/: test-server.js
version-control/: version-control.html
(+18 files in other folders)
