[project]
name = "web-docs-editor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "llama-cpp-python>=0.3.14",
    "pyinstaller>=6.14.2",
    "pyopencl>=2025.2.5",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "uvicorn",
]


# Correct ✅
"llama-cpp-python" = [ "cmake.args=-DGGML_VULKAN=on" ]
